--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -9,7 +9,7 @@
 <div layout:fragment="content" class="container body-content">
     <h2>Bus Information</h2>
     <div>
-        <p>You entered postcode <span th:text="${busInfo.postcode}"></span></p>
+        <p>You entered postcode <span th:text="${busInfo[0].toString}"></span></p>
     </div>
 </div>
 </body>
