--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -10,9 +10,9 @@
         }
 
         async function reload() {
-            console.log("Sleeping");
+            //console.log("Sleeping");
             await sleep(30000);
-            console.log("Waking");
+            //console.log("Waking");
             location.reload();
         }
         reload();
