--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,11 +17,20 @@
     <div class="row">
         <div class="col-md-12">
             <form id="messageForm" th:action="@{/busInfo}" method="get">
-                <fieldset>
+                <!--<fieldset>
                     <legend>Postcode: </legend>
-                    <input type="text" name="postcode">
-                    <input type="submit" value="Get Bus Info" />
-                </fieldset>
+                    <input type="text" class="form-control" name="postcode">
+                    <input type="submit" class="btn" value="Get Bus Info" />
+                </fieldset>-->
+                <div class="input-group">
+                    <span class="input-group-addon">Postcode</span>
+                    <input type="text" class="form-control" name="postcode">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit">
+                            <i class="glyphicon glyphicon-bus"></i>
+                        </button>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
