--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 <body>
 <div layout:fragment="content" class="container body-content">
     <div th:if="${error}" class="alert alert-danger">
+        <span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
         You didn't put in a valid postcode.
     </div>
     <div class="jumbotron">
@@ -27,7 +28,7 @@
                     <input type="text" class="form-control" name="postcode">
                     <div class="input-group-btn">
                         <button class="btn btn-default" type="submit">
-                            <i class="glyphicon glyphicon-bus"></i>
+                            <i class="fa fa-bus"></i>
                         </button>
                     </div>
                 </div>
