--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,9 +5,11 @@
     <title>Layout</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
           href="../../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+<nav class="navbar navbar-expand-md navbar-light mb-4" style="background-color: #eee">
+    <a class="navbar-brand"><span class="fa fa-bus"></span></a>
     <a class="navbar-brand" th:href="@{/}">BusBoard</a>
 </nav>
 
